OldStuff/tests/copies/newAndNeedChangeTests/fail/Synchronized.java
package fail;

import java.lang.System;

public class Synchronized {

  public static void main(String[] args ) {
    boolean synchronized = true;
  }

}
